# VertexEngineGL

./: .gitmodules  Cargo.toml  README.md  rustfmt.toml
.github/: CONTRIBUTING.md
.github/workflows/: main.yml
SandBox/res/shaders/: shader.frag  shader.vert
SandBox/src/: Application.cpp
Vertex/: CMakeLists.txt
Vertex/include/: Vertex.h
Vertex/src/Core/Renderer/: Renderer.cpp  Renderer.h
Vertex/src/GL/: Buffer.cpp  GraphicsAPI.cpp  GraphicsContext.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
Vertex/src/GUI/: GUILayer.cpp
Vertex/src/Window/: Input.cpp  Input.h  Window.cpp  Window.h
Vertex/src/Window/GLFW/: GLFWInput.cpp  GLFWInput.h  GLFWWindow.cpp  GLFWWindow.h
examples/: fullscreen.rs  sandbox.rs
src/: lib.rs  prelude.rs
src/core/: mod.rs
src/core/errors/: init_error.rs  mod.rs
src/coregl/: buffers.rs  graphics_api.rs  graphics_context.rs  graphics_resource.rs  mod.rs  renderable.rs
src/errors/: init_error.rs  mod.rs
src/events/: event_types.rs  mod.rs
src/gl/: mod.rs
src/graphics/: mod.rs
src/graphics/errors/: mod.rs
src/graphics/events/: mod.rs
src/graphics/window/: mod.rs
src/vulkan/: mod.rs  vk_buffers.rs  vk_context.rs
src/window/: mod.rs
src/windowing/: mod.rs  win_properties.rs
tests/: sandbox.rs
