[package]
name = "vertex_engine"
version = "0.1.0"
authors = ["Dinu Blanovschi <dinu.blanovschi@criptext.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.glfw]
version = "^0.39"

[dependencies.vulkano]
version = "^0.19"
optional = true


[features]
default = ["vulkan"]

vulkan = ["vulkano"]
opengl = []