[package]
name = "vertex_engine"
version = "0.1.0"
authors = ["Sachin Cherian <sachincs173@gmail.com>", "Dinu Blanovschi <dinu.blanovschi@criptext.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "^0.19"
vulkano-shaders = "^0.18"
glfw = {version = "^0.39", features = ["vulkan"]}